--- a/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
+++ b/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
@@ -17,3 +17,35 @@
 └ 에러가 발생 → 컴파일 X
 
 ## 2.1 Implicit Types vs Explicit Types
+
+타입스크립트의 타입 시스템에 대해 알아볼꺼임
+
+단순히 이렇게 해도 알아는 먹음
+
+```ts
+let a = 123;
+```
+
+이렇게 기존 방식으로 해도 타입스크립트는 변수 a는 숫자다라고 알아먹음
+
+이 방법의 문제점은 결국 js랑 다를 바 없는게 문제임
+
+왜 js 말고 ts를 쓰겠음?
+
+확실하게 타입 정해서 안정성을 높여서 구현할려고 하는거 아녀
+
+만약 변수 a 는 "123" string으로 할려고 했는데 잘못해서 그냥 숫자 123 담은거면 어쩔꺼여
+
+아니면 우선 변수 선언만 하고 후에 값을 담을때 다른 타입을 넣거나 뭐 이런거
+
+이런거 잡을려고 타입스크립트 쓰는거 아녀~
+
+그런 이유로
+
+구체적으로 명시도 가능함
+
+```ts
+let b: boolean = "a";
+```
+
+이러면 변수 b는 boolean인데 string을 담을려고 하니까 에러가 뜸
