--- a/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
+++ b/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
@@ -36,16 +36,185 @@ let a = 123;
 
 만약 변수 a 는 "123" string으로 할려고 했는데 잘못해서 그냥 숫자 123 담은거면 어쩔꺼여
 
-아니면 우선 변수 선언만 하고 후에 값을 담을때 다른 타입을 넣거나 뭐 이런거
+아니면 우선 변수 선언만 하고 후에 값을 담을때 다른 타입값을 넣어 버렸거나 뭐 이런 경우들
 
-이런거 잡을려고 타입스크립트 쓰는거 아녀~
+이런거 잡을려고 타입스크립트 쓰는거 아녀~ 그래 안그래~
 
 그런 이유로
 
-구체적으로 명시도 가능함
+구체적으로 명시방법을 사용하도록 하자
 
 ```ts
-let b: boolean = "a";
+let b: boolean = false;
 ```
 
-이러면 변수 b는 boolean인데 string을 담을려고 하니까 에러가 뜸
+만약 변수 b 에 string을 담을려고 하면 에러가 뜸
+
+배열은 이렇게
+
+```ts
+let c: number[] = [];
+```
+
+⭐ Type 시스템
+
+└ 명시적 정의(변수 선언 시 타입 정의)
+
+let a: boolean = "x"
+
+→ 🚫 boolean 타입에 string타입 할당 불가 알림
+
+└ 변수만 생성(타입 추론)
+
+let b = "hello"
+
+→ b가 string 타입이라고 추론
+
+b = 1
+
+→ 🚫 string 타입에 number타입 할당 불가 알림
+
+## 2.2 Types of TS part One
+
+```ts
+let a: number = 1;
+let b: string = "str";
+let c: boolean = true;
+```
+
+이런건 쉬움
+
+더 깊이 타입에 대해 좀 더 알아보자
+
+`object`
+
+```ts
+const playerA: {
+  name: string;
+  age?: number;
+} = {
+  name: "hahaha",
+};
+```
+
+이렇게 먼저 해주고 값 넣어줄수 있음
+
+age 뒤에 ? 는 값 넣는게 필수가 아니게 하는 거임
+
+여기서 만약 age 값이 들어 있지 않는데 age를 불러 판별할려고 하면
+
+```js
+if (playerA.age < 10) {
+  console.log("ddd");
+}
+```
+
+에러가 뜸
+
+이건
+
+```js
+if (playerA.age && playerA.age < 10) {
+  console.log("ddd");
+}
+```
+
+이렇게 가능함
+
+추가로 오브젝트를 만들려면 또 변수 타입을 정해줘야하는데
+
+타입 정해주는게 똑같다면 번거롭기 그지 없음
+
+이 경우 Alias(별칭) 탑을 생성 할 수 있음
+
+```ts
+type Player = {
+  name: string;
+  age?: number;
+};
+
+const playerA: Player = {
+  name: "hahaha",
+};
+
+const playerB: Player = {
+  name: "kakaka",
+  age: 12,
+};
+```
+
+이렇게도 별칭 쓸 수 있음
+
+```ts
+type age = number;
+type name = string;
+```
+
+> 근데 그냥 클래스 만들어서 사용하면 안됨? 클래스가 훠어얼씬 편할꺼 같은데?
+> 뭐 이렇게 간단하게 변수 값만 넣는거는 그냥 별칭 써도 될듯
+
+이번에는 함수 return 값의 타입을 지정하는 거임
+
+```ts
+function playerMaker(name: string): Player {
+  return {
+    name: name,
+  };
+}
+```
+
+이렇게 쌉 가능 `Player` 는 아까 만든 별칭 Player 임
+
+```ts
+const playerMaker(name:string):Player => ({name})
+```
+
+이렇게도 쌉 가능
+
+## 2.3 Types of TS part Two
+
+더 많은 타입을 봅시다잉
+
+📌 Types of TS(part II)
+
+✅ readonly 사용하기
+
+```ts
+type Player = {
+  readonly name: string;
+  age?: number;
+};
+
+const playerMaker = (name: string): Player => ({ name });
+const nico = playerMaker("nico")
+
+🚫 nico.name = "aa"
+
+const numbers: readonly number[] = [1, 2, 3, 4]
+
+🚫 numbers.push(1)
+
+```
+
+❗ readonly가 있으면 최초 선언 후 수정 불가
+
+⇒ immutability(불변성) 부여
+
+but, javascript에서는 그냥 배열
+
+✅ Tuple
+
+정해진 개수와 순서에 따라 배열 선언
+
+```ts
+const player: [string, number, boolean] = ["nico", 1, true]
+❗ readonly도 사용가능 ⇒ readonly [...] 형태
+```
+
+✅ undefined, null, any
+
+any: 아무 타입
+
+undefined: 선언X 할당X
+
+null: 선언O 할당X
