--- a/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
+++ b/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
@@ -175,8 +175,6 @@ const playerMaker(name:string):Player => ({name})
 
 더 많은 타입을 봅시다잉
 
-📌 Types of TS(part II)
-
 ✅ readonly 사용하기
 
 ```ts
@@ -218,3 +216,62 @@ any: 아무 타입
 undefined: 선언X 할당X
 
 null: 선언O 할당X
+
+## 2.4 Types of TS part Three
+
+이번에는 매우 독특한 타입을 알아 볼꺼임
+
+✅ unknown
+
+```ts
+let a:unknown
+
+if(typeof a === 'number'){
+    let b = a + 1
+}
+if(typeof a === 'string'){
+    let b = a.toUpperCase()
+}
+🚫 let b = a + 1
+```
+
+✅ void
+
+아무것도 return하지 않는 함수에서 반환 자료형
+
+```ts
+function hello() {
+    console.log('x')
+}
+const a = hello()
+🚫 a.toUpperCase()
+```
+
+✅ never
+
+함수가 return하지 않을 때
+
+```ts
+unction hello():never {
+    throw new Error("zzz")
+    🚫return "a"
+}
+
+function temp(name:string|number):never {
+    if(typeof name === "string"){
+        name
+    } else if(typeof name === "number"){
+        name
+    } else {
+        name
+    }
+}
+```
+
+if 안에서는 string형의 name 반환
+
+else if 안에서는 number형의 name 반환
+
+else 안에서는 never형의 name 반환
+
+⇒ 즉, 제대로 인자가 전달되었다면 else로 올 수 없음
