--- a/md/3.0 ~ 3.4 FUNCTIONS.md
+++ b/md/3.0 ~ 3.4 FUNCTIONS.md
@@ -77,3 +77,163 @@ const add: Add = (a, b) => {
 우선 넘어가
 
 ## 3.2 Polymorphism
+
+- 다형성 > many(poly) + structure(morphos) > 여러가지 구조들
+
+가령
+
+```ts
+type SuperPrint = {
+  (arr: number[]): void;
+  (arr: boolean[]): void;
+};
+
+const superPrint: SuperPrint = (arr) => {
+  arr.forEach((arr) => console.log(arr));
+};
+```
+
+이렇게 배열을 받아 포이치로 console.log를 찍는다고 했을때
+
+```ts
+superPrint([1, 2, 3, 4, 5]);
+superPrint([true, false, true, false]);
+```
+
+이런식이 될 수 있겠다.
+
+근데
+
+```ts
+superPrint(["a", "b", "c", "d"]);
+```
+
+이렇게 string 을 찍어내야한다면
+
+```ts
+type SuperPrint = {
+  (arr: number[]): void;
+  (arr: boolean[]): void;
+  (arr: string[]): void;
+};
+```
+
+이렇게 string 을 받을꺼라고 적어줘야한다
+
+이게 단순히 한두개 정도면 상관없겠지만
+
+```ts
+superPrint([6, true]);
+```
+
+이런 형태면?
+
+```ts
+(arr:(number | boolean )[]):void
+```
+
+이것을 추가하면 된다
+
+```ts
+superPrint([6, true, "7"]);
+```
+
+이러면?
+
+```ts
+(arr:(number | boolean | string)[]):void
+```
+
+이거? 솔직히 쌉구림
+
+우리가 call signature를 작성할 때,
+
+뭐가 무슨 타입이 들어올지 정확하게 모를땐
+
+`generic` 을 사용하도록 하자
+
+제네릭을 사용하면 ts 가 알아서 타입을 유추해서 사용함
+
+```ts
+type SuperPrint = {
+  <TypePlaceholder>(arr: TypePlaceholder[]): void;
+};
+```
+
+이렇게 <> 를 쓰면 제네릭을 쓴다고 선언한거임
+
+여기서 반환값까지 해버릴수도 있음
+
+그리고 이름 굳이 TypePlaceholder 라고 안해도 됨
+
+```ts
+type SuperPrint = {
+  <T>(arr: T[]): T;
+};
+
+const superPrint: superPrint = (a) => a[0];
+```
+
+이렇게
+
+이러면 알아서 존나 잘한다~
+
+## 3.3 Generics Recap
+
+근데 이럴꺼면 그냥 `any`를 써버리지
+
+굳이 제네릭을 쓰는 이유가 뭘까?
+
+any랑 generic 은 다름
+
+any는 말 그대로 any라 **ts의 타입 체커로부터 보호받지 못함**
+
+가령
+
+```ts
+type SuperPrint = (arr: any[]) => any;
+
+const superPrint: superPrint = (a) => a[0];
+
+const a = superPrint([6, 5, 4]);
+const b = superPrint([6, true, "a"]);
+const c = superPrint(["6", true, "a", 6, 5]);
+```
+
+이럴때 a, b, c 변수 모두 타입은 any가 되어버림
+
+만약
+
+```ts
+a.toUpperCase();
+```
+
+라고 하면 아무 경고창도 안뜰꺼임
+
+실행해서야 오류가 뜨것지
+
+하지만 generic 을 사용했을때
+
+a,b,c 는 각각의 타입들이 있어서
+
+잘못된 코드가 있음 바로바로 빨간줄을 띄움
+
+generic은
+
+    Call Signature를 concrete type으로 하나씩 추가하는 형태이기 때문에
+
+any랑 다르다고 할 수 있다~
+
+그리고 generic을 추가 하고 싶다면
+
+```ts
+type SuperPrint = <T, M>(arr: T[], b: M) => T;
+```
+
+이럼 됨
+
+타입스크립트는 generic을 처음 인식했을 때와 generic의 순서를 기반으로 generic의 타입을 알게 돼
+
+그러니까 어련히 앎
+
+## 3.4 Conclusions
