--- a/md/3.0 ~ 3.4 FUNCTIONS.md
+++ b/md/3.0 ~ 3.4 FUNCTIONS.md
@@ -237,3 +237,67 @@ type SuperPrint = <T, M>(arr: T[], b: M) => T;
 그러니까 어련히 앎
 
 ## 3.4 Conclusions
+
+실제로 generic을 어떻게 다루는지 살펴보자
+
+```ts
+function superPrint<T>(a: T[]) {
+  return a[0];
+}
+```
+
+이거임
+
+call signatures 따로 선언하지 않고 fnc 에 같이 묶어서 한거임
+
+```ts
+type Player<E> = {
+  name: string;
+  extraInfo: E;
+};
+
+const nico: Player<{ favFood: string }> = {
+  name: "nico",
+  extraInfo: {
+    favFood: "kakao",
+  },
+};
+```
+
+이렇게 extraInfo 란에 generic 을 박는 경우 도 있음
+
+```ts
+type Player<E> = {
+  name: string;
+  extraInfo: E;
+};
+type NicoExtra = {
+  favFood: string;
+};
+
+type NicoPlayer = Player<NicoExtra>;
+
+const nico: NicoPlayer = {
+  name: "nico",
+  extraInfo: {
+    favFood: "kakao",
+  },
+};
+```
+
+이런식으로도 가능함
+
+그리고 lala는 extraInfo 가 없다면
+
+```ts
+const lala: Player<null> = {
+  name: "lala",
+  extraInfo: null,
+};
+```
+
+이렇게 됨
+
+이처럼 generic은 다양하게 쓰임
+
+라이브러리 가면 다 있음
