--- a/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
+++ b/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
@@ -3,3 +3,111 @@
 ## 4.0 Classes
 
 이번에는 ts로 객체지향 프로그래밍을 해볼꺼임
+
+ts 는 class 생성자를 만들때 this 안써도 됨
+
+```ts
+class Player1 {
+  constructor(
+    private firstName: String,
+    private lastName: String,
+    public nickName: String
+  ) {}
+}
+```
+
+이러면 js 파일로 컴파일러 하면
+
+```js
+class Player1 {
+  constructor(firstName, lastName, nickName) {
+    this.firstName = firstName;
+    this.lastName = lastName;
+    this.nickName = nickName;
+  }
+}
+```
+
+이렇게 됨 js 는 private 같은게 없음
+
+그래서 다 접근해서 후루룩 해버리는데
+
+그걸 ts가 사전에 막아줌
+
+그래서
+
+```ts
+const ex = new Player1("ex", "las", "엑스");
+
+ex.firstName; //ERROR
+```
+
+ts 에서는 firstName 속성은 private 여서 Player1 클래스 내에서만 액세스 할 수 잇다고 막음
+
+근데 js 에서는 그런거 없음
+
+이처럼 js에서 못하는 걸 ts에서는 할 수 있다~
+
+---
+
+다음으로는 추상클래스임
+
+추상클래스는
+
+    다른 클래스가 상속받을 수 있는 클래스
+
+    긍데 이 클래스는 직접 새로운 인스턴스를 만들 수 없어
+
+    한마디로
+
+    클래스를 상속해서 사용하려는 놈에게 특정기능은 있어야한다 하는거임
+
+```ts
+abstract class User {
+  constructor(
+    private firstName: String,
+    private lastName: String,
+    public nickName: string
+  ) {}
+}
+
+class Player1 extends User {}
+
+const ex = new Player1("ex", "las", "엑스");
+```
+
+여기서 추상메소드도 넣어보자
+
+```ts
+abstract class User {
+  constructor() {} // 생략....
+
+  getFullName() {
+    return `${this.firstName}  ${this.lastName}`;
+  }
+}
+```
+
+이 추상메소드를 private 하거나 다른 접근제어자를 써서
+
+접근을 제한 할 수 있음
+
+물론 js 에서는 그런거 없음 ㅋ
+
+추상조차 없음
+
+private를 사용하면 상속받은 클래스 안에서 마저도 this 사용해 접근 불가능
+
+그래서 protected를 사용하면 상속받은 클래스 안에서 this 사용해 접근 가능
+
+물론 protected로 지정된 것들은 외부에서 사용이 불가능
+
+추상클래스 안에 메소드는 적어서는 안되고 call signature만 적어야 함
+
+추상클래스 안의 메소드는 결국 구현이 되지 않는다고 나옴
+
+| 구분　　  | 　선언한 클래스 내　 | 상속받은 클래스 내　 |   인스턴스    |
+| :-------: | :------------------: | :------------------: | :-----------: |
+|  private  |     　 　　　 ⭕     |  　　　　　　　 ❌   | 　　　　　 ❌ |
+| protected |      　　　 ⭕       |  　　　　　　　 ⭕   | 　　　　　 ❌ |
+|  public   |    　　　　　 ⭕     |  　　　　　　　 ⭕   | 　　　　　 ⭕ |
