--- a/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
+++ b/md/2.0 ~ 2.4 OVERVIEW OF TYPESCRIPT.md
@@ -125,7 +125,7 @@ if (playerA.age && playerA.age < 10) {
 
 타입 정해주는게 똑같다면 번거롭기 그지 없음
 
-이 경우 Alias(별칭) 탑을 생성 할 수 있음
+이 경우 Alias(별칭) 타입을 생성 할 수 있음
 
 ```ts
 type Player = {
