--- a/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
+++ b/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
@@ -133,3 +133,140 @@ abstract class User {
 |  public   |          ⭕          |          ⭕          |    ⭕    |
 
 ## 4.1 Recap
+
+생략
+
+할려고 했는데 안본 걸 쓰네
+
+사전을 구현 해본데
+
+사전이 words 오브젝트를 가진다고 알려줄꺼임
+
+```ts
+class Dict2 {
+  constructor(private x: string) {}
+}
+```
+
+원래는 이런식으로 해야할텐데 이렇게 안할꺼래
+
+constructor에서 값을 형태를 지정 안할꺼래
+
+```ts
+type Words = {
+  [key: string]: string;
+};
+
+class Dict {
+  private words: Words;
+}
+```
+
+private words 를 선언해주고 words의 타입을 알려줄꺼임
+
+오브젝트 타입 설정할때 이렇게도 씀
+
+key 값은 무조건 string 인거임
+
+근데 이러면 Dict 클래스에 words 에 에러가 뜨는데
+
+words는 initializer 가 없고
+
+constructor에서 정의된 sign 이 아니라고 ㅈㄹ함
+
+```ts
+type Words = {
+  [key: string]: string;
+};
+
+class Dict {
+  private words: Words;
+
+  constructor() {
+    this.words = {};
+  }
+}
+```
+
+```ts
+// dictionary 만들기
+
+type Words = {
+  [key: string]: string;
+};
+
+class Dict {
+  private words: Words;
+
+  constructor() {
+    this.words = {};
+  }
+
+  // 단어 추가 메소드
+  add(word: Word) {
+    if (this.words[word.term] === undefined) {
+      // undefined 는 사전에 없는가를 묻는거
+      this.words[word.term] = word.def;
+    }
+  }
+
+  // 단어 보여주기
+
+  def(term: string) {
+    return this.words[term];
+  }
+}
+
+class Word {
+  constructor(public term: string, public def: string) {}
+}
+
+// 객체 생성
+const fucking = new Word("퍽킹", "엿머겅");
+
+const dict = new Dict();
+
+dict.add(fucking);
+
+dict.def("퍽킹");
+```
+
+```js
+"use strict";
+// dictionary 만들기
+class Dict {
+  constructor() {
+    this.words = {};
+  }
+  // 단어 추가 메소드
+  add(word) {
+    if (this.words[word.term] === undefined) {
+      // undefined 는 사전에 없는가를 묻는거
+      this.words[word.term] = word.def;
+    }
+  }
+  // 단어 보여주기
+  def(term) {
+    return this.words[term];
+  }
+}
+class Word {
+  constructor(term, def) {
+    this.term = term;
+    this.def = def;
+  }
+}
+// 객체 생성
+const fucking = new Word("퍽킹", "엿머겅");
+const dict = new Dict();
+dict.add(fucking);
+dict.def("퍽킹");
+```
+
+이렇게 변환됨
+
+이제 추가로 값 삭제니 뭐니 코드 챌린지 해보라는데 귀찮
+
+우선 넘어가 ㅋ
+
+## 4.2 Interfaces
