--- a/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
+++ b/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
@@ -270,3 +270,223 @@ dict.def("퍽킹");
 우선 넘어가 ㅋ
 
 ## 4.2 Interfaces
+
+Typescript에서 type은 내가 원하는 대로 타입을 정의해서 할 수 있음
+
+```ts
+type Player = {
+  nickname: string;
+  healthBar: number;
+  // ...~
+};
+```
+
+이렇게 player 오브젝트의 모양을 알려주고 있는 거임
+
+```ts
+const p1: Player = {
+  nickname: "hi",
+  healthBar: 99,
+};
+```
+
+그리고 이렇게 값을 만들 수 있음
+
+타입을 사용하는 다른 방법으로는
+
+```ts
+type Food = string;
+
+const kim: Food = "김김김";
+```
+
+```ts
+type Nickname = string;
+type healthBar = number;
+type Friends = Array<string>;
+
+type Player = {
+  nickname: Nickname;
+  healthBar: healthBar;
+  friends: Friends;
+};
+```
+
+이렇게 가능함
+
+또한 타입을 지정한 옵션만으로 제한 할 수 도 있음
+
+```ts
+type Team = "red" | "blue" | "yellow";
+
+type Player = {
+  nickname: string;
+  team: Team;
+};
+```
+
+이런식으로도 가능함
+
+이제 오브젝트 모양을 설명하는 다른 방법인 인터페이스에 대해 알아볼꺼임
+
+인터페이스는 타입이랑 비슷함
+
+```ts
+interface Player {
+  nickname: Nickname;
+  healthBar: healthBar;
+  friends: Friends;
+}
+```
+
+타입은 여러가지 타입을 설정할 수 있지만
+
+```ts
+interface fjk = string; //ERROR
+```
+
+이렇게는 안됨
+
+인터페이스는 오직 오브젝트의 모양을 특정해주기 위한거임
+
+한마디로 타입이 좀 더 많은걸 할 수 있음
+
+하지만 인터페이스는 클래스와 비슷하게 사용할 수 있음
+
+인터페이스는 상속이 가능함
+
+```ts
+interface User {
+  name: string;
+}
+
+interface Player extends User {}
+
+const nico: Player = {
+  name: "ssss",
+};
+```
+
+이렇게 부모 인터페이스의 멘버를 그대로 상속 받아서 사용 쌉가능
+
+타입으로 이렇게 할려면
+
+```ts
+type User = {
+  name: string;
+};
+
+type Player = User & {};
+
+const nico: Player = {
+  name: "ssss",
+};
+```
+
+이럼
+
+인터페이스의 또 다른 특징으로 property 를 축적할수 있음
+
+```ts
+interface User {
+  name: string;
+}
+interface User {
+  lastname: string;
+}
+interface User {
+  healthBar: number;
+}
+
+const nico: User = {
+  name: "nico",
+  lastname: "sss",
+  healthBar: 99,
+};
+```
+
+이렇게 가능함
+
+## 4.3 Interfaces part Two
+
+추상클래스는 다른 클래스가 가져야할 property랑 메소드를 명시 할 수 있도록 도와줌
+
+```ts
+abstract class USer {
+  constructor(protected firstName: string, protected lastName: string) {}
+
+  abstract sayHi(name: string): string;
+  abstract fullName(): string;
+}
+```
+
+이렇게 추상 클래스를 하면
+
+```ts
+class Player2 extends User2 {
+  fullName() {
+    return `${this.firstName} ${this.lastName}`;
+  }
+  sayHi(name: string) {
+    return `${name} Hi.. hahaha.. my name is ${this.fullName()}`;
+  }
+}
+```
+
+이렇게 구현이 되겠지
+
+추상클래스의 문제점은 자바스크립트에는 추상화의 개념이 없어
+
+```js
+class User2 {
+  constructor(firstName, lastName) {
+    this.firstName = firstName;
+    this.lastName = lastName;
+  }
+}
+```
+
+이렇게 추상클래스가 js 로 컴파일되면 그냥 일반 클래스로 변해버림
+
+쓰지도 않을 클래스로 남아서 자리 차지 하고 있는거임
+
+이럴때 인터페이스를 써야하는 법임
+
+인터페이스는 가벼움
+
+인터페이스를 컴파일 하면 아예 사라져버림
+
+인터페이스를 쓰면 이렇게 됨
+
+```ts
+interface User2 {
+  firstName: string;
+  lastName: string;
+
+  sayHi(name: string): string;
+  fullName(): string;
+}
+
+class Player2 implements User2 {
+  constructor(public firstName: string, public lastName: string) {}
+
+  fullName() {
+    return `${this.firstName} ${this.lastName}`;
+  }
+  sayHi(name: string) {
+    return `${name} Hi.. hahaha.. my name is ${this.fullName()}`;
+  }
+}
+```
+
+여기서 문제가 2개 있는데
+
+하난 인터페이스는 private property 를 못쓴다는거임
+
+private를 쓰면 에러떠서 public으로 선언했자너
+
+또 다른건 생성자(constructor)를 선언 부분에서 할 수 없어서
+
+클래스 구현할때에 박아줘야한다는 점임
+
+## 4.4 Recap
