--- a/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
+++ b/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
@@ -446,15 +446,19 @@ class User2 {
 }
 ```
 
+그래서
+
 이렇게 추상클래스가 js 로 컴파일되면 그냥 일반 클래스로 변해버림
 
-쓰지도 않을 클래스로 남아서 자리 차지 하고 있는거임
+쓰지도 않을 클래스로 남아서 파일 용량 자리 차지 하고 있는거임
 
 이럴때 인터페이스를 써야하는 법임
 
-인터페이스는 가벼움
+인터페이스를 js 컴파일 하면 아예 사라져버림
 
-인터페이스를 컴파일 하면 아예 사라져버림
+그럼 딱 규제의 역활만 해주고 떠나주는거임
+
+js 파일도 가벼워지고 딱 좋음
 
 인터페이스를 쓰면 이렇게 됨
 
@@ -490,3 +494,52 @@ private를 쓰면 에러떠서 public으로 선언했자너
 클래스 구현할때에 박아줘야한다는 점임
 
 ## 4.4 Recap
+
+Type Aliases과 Interfaces의 차이점
+
+Type Aliases과 인터페이스는 매우 유사하며 많은 경우 자유롭게 선택할 수 있습니다.
+
+인터페이스의 거의 모든 기능은 type에서 사용할 수 있으며,
+
+주요 차이점은 type을 다시 열어 새 속성을 추가할 수 없는 것입니다.
+
+반면 인터페이스는 항상 확장 가능합니다.
+
+## 4.5 Polymorphism
+
+지금까지 배웠던
+
+제네릭, 클래스, 인터페이스를 이용해보자
+
+```ts
+interface SStorage<T> {
+  [key: string]: T;
+}
+
+class LocalStorage<T> {
+  private storage: SStorage<T> = {};
+
+  set(key: string, value: T) {
+    this.storage[key] = value;
+  }
+  remove(key: string) {
+    delete this.storage[key];
+  }
+  get(key: string): T {
+    return this.storage[key];
+  }
+  claer() {
+    this.storage = {};
+  }
+}
+```
+
+이렇게 구현해서 인스턴스화 하면
+
+```ts
+const stringsStorage = new LocalStorage<string>();
+const numberStorage = new LocalStorage<number>();
+const booleanStorage = new LocalStorage<boolean>();
+```
+
+이렇게 쌉 가능
