--- a/md/5.0 ~ 5.8 BLOCKCHAIN.md
+++ b/md/5.0 ~ 5.8 BLOCKCHAIN.md
@@ -49,3 +49,365 @@ ex) 화살표 함수() => this는 ES5 이하이면 함수 표현식으로 바뀝
 https://www.typescriptlang.org/tsconfig#target
 
 "build": "tsc" 또는 "npx tsc"
+
+## 5.2 Lib Configuration
+
+lib 속성에 대해 알아보자
+
+lib
+
+타입스크립트에게 어떤 API를 사용하고 어떤 환경에서 코드를 실행하는 지를 지정할 수 있습니다.
+
+(target 런타임 환경이 무엇인지를 지정합니다.)
+
+프로그램이 브라우저에서 실행되면 lib에 "DOM" 유형 정의를 할 수 있습니다.
+
+DOM: window, document 등
+
+ex) "lib": ["ES6","DOM"]
+
+https://www.typescriptlang.org/tsconfig#lib
+
+## 5.3 Declaration Files
+
+strict
+
+모든 엄격한 타입 검사 옵션을 활성화합니다.
+
+strict 플래그는 프로그램 정확성을 더 강력하게 보장하는 광범위한 타입 검사 동작을 가능하게 합니다.
+
+https://www.typescriptlang.org/tsconfig#strict
+
+타입스크립트는 자바스크립트와는 다르게 strongly-typed 이기 때문에
+
+타입스크립트에서 사용할 자바스크립트 라이브러리의 함수 모양을 설명
+
+그리고 이 타입 정의를 서술한 파일이 Declaration File
+
+## 5.4 JSDoc
+
+JSDoc
+
+    코멘트로 이루어진 문법
+
+- @ts-check
+
+  JavaScript 파일에서 오류를 활성화하려면
+
+  // @ts-check를 .js 파일의 첫 번째 줄에 추가하여
+
+  TypeScript가 오류를 발생시키도록 합니다.
+
+  TypeScript는 여러 오류를 제공할 수 있습니다.
+
+  ```js
+  // @ts-check
+  /**
+   * Initializes the project
+   * @param {object} config
+   * @param {boolean} config.debug
+   * @param {string} config.url
+   * @returns {void}
+   */
+
+  export function init(config) {
+    return true;
+  }
+  ```
+
+  이럼 config는 object 고
+
+  config 안에 debug는 boolean 이고
+
+  url 은 string 이라는 소리임
+
+  글고 마지막 void는 return 을 말하는 거임
+
+  void인데 true로 boolean을 뱉고 있어서 오류 뜸
+
+이러한 오류를 무시하고 싶다면
+
+// @ts-ignore 또는 // @ts-expect-error를 추가하여 특정 줄의 오류를 무시할 수 있습니다.
+
+https://www.typescriptlang.org/docs/handbook/intro-to-js-ts.html#ts-check
+
+- @JSDoc Reference
+
+  JSDoc 주석을 사용하여 JavaScript 파일에 type 정보를 제공할 수 있습니다.
+
+  (자바스크립트 파일에서 타입 정보를 제공할 수 있습니다.)
+
+  https://www.typescriptlang.org/docs/handbook/jsdoc-supported-types.html
+
+- @param, @returns
+
+```js
+/**
+ * @param {string} p1 - A string param.
+ * @param {string=} p2 - An optional param (Google Closure syntax)
+ * @param {string} [p3] - Another optional param (JSDoc syntax).
+ * @param {string} [p4="test"] - An optional param with a default value
+ * @returns {string} This is the result
+ */
+function stringsStringStrings(p1, p2, p3, p4) {
+  // 코드...
+}
+```
+
+https://www.typescriptlang.org/docs/handbook/jsdoc-supported-types.html#param-and-returns
+
+## 5.5 Blocks
+
+ts-node
+
+ts-node는 Node.js용 TypeScript 실행 엔진 및 REPL입니다.
+JIT는 TypeScript를 JavaScript로 변환하므로 사전 컴파일 없이 Node.js에서 TypeScript를 직접 실행할 수 있습니다.
+
+> 빌드없이 빠르게 새로고침 하고 싶을때 사용하는거
+
+    npm i ts-node -D
+
+https://www.npmjs.com/package/ts-node
+
+nodemon
+
+> 자동으로 커맨드를 재실행해줘서 일일히 커맨드를 다시 실행할 필요가 없음
+
+    npm i nodemon -D
+
+https://www.npmjs.com/package/nodemon
+
+esModuleInterop
+
+CommonJS 모듈을 ES6 모듈 코드베이스로 가져오려고 할 때 발생하는 문제를 해결합니다.
+
+ES6 모듈 사양을 준수하여 CommonJS 모듈을 정상적으로 가져올 수 있게 해줍니다.
+
+https://www.typescriptlang.org/tsconfig/#esModuleInterop
+
+블록체인 시리즈
+
+https://www.youtube.com/playlist?list=PL7jH19IHhOLOJfXeVqjtiawzNQLxOgTdq
+
+이제 블록체인을 디자인 해보자
+
+블록체인은 말 그대로 여러 개의 블록이 사슬처럼 묶여 있음
+
+그 블록 안에는 데이터가 들어가 있어
+
+이 블록은 다른 블록에 묶여 있고
+
+그 연결고리는 해쉬값이야
+
+```ts
+interface BlockShape {
+  // 해쉬값
+  hash: string;
+  // 이전의 해쉬값
+  prevHash: string;
+  // 블록의 위치
+  height: number;
+  // 데이터
+  data: string;
+}
+
+class Block implements BlockShape {
+  public hash: string;
+  constructor(
+    public prevHash: string,
+    public height: number,
+    public data: string
+  ) {}
+}
+```
+
+이렇게 되는데
+
+여기서 해쉬값을 생성자에 박지 않은 이유는
+
+해쉬는 위의 3개의 값을 이용해서 만들어지는 거라
+
+안 넣었는데 안넣었다고 ㄱㅈㄹ 함
+
+hash 변수를 초기화해줘야해
+
+this.hash 적어주고 static 함수를 불러줄거임
+
+static은 인스턴스하지 않고 클래스에서 그대로 가져와 쓰는거임
+
+```ts
+class Block implements BlockShape {
+  public hash: string;
+  constructor(
+    public prevHash: string,
+    public height: number,
+    public data: string
+  ) {
+    this.hash = Block.calculateHash(prevHash, height, data);
+  }
+
+  static calculateHash(prevHash: string, height: number, data: string): string {
+    return "fuck";
+  }
+}
+```
+
+이런식으로
+
+자 이제 calculateHash 함수를 구현해보자
+
+3개의 변수들로 해쉬값을 만들어야하는데
+
+NodeJS 패키지 중 하나인 crypto를 이용할꺼임
+
+```ts
+import crypto from "crypto";
+```
+
+이럼 오류가 뜸
+
+crypto 모듈에 default export 가 없다고 그럼
+
+```ts
+import * as crypto from "crypto";
+```
+
+이럼 해결됨
+
+이러기 싫음
+
+`tsconfig.json`에서
+
+    "esModuleInterop": true
+
+추가하면 됨
+
+## 5.6 DefinitelyTyped
+
+DefinitelyTyped
+
+TypeScript type 정의를 위한 리포지토리입니다.
+
+https://github.com/DefinitelyTyped/DefinitelyTyped
+
+    @types/node
+    npm i @types/node -D
+
+```ts
+  static calculateHash(prevHash: string, height: number, data: string): string {
+    const toHash = `${prevHash}${height}${data}`;
+
+    return crypto.createHash(`sha256`).update(toHash).digest("hex");
+  }
+```
+
+타입스크립트가 아직 최신이라 옛날에 만들어진 JS 모듈 정의가 안된 경우가 있음
+
+그럴때 저 리포지토리 들어가서 찾아서 설치해라 뭐 이런 소리임
+
+## 5.7 Chain
+
+블록 생성 기능 구현
+
+```ts
+class Blockchain {
+  private blocks: Block[];
+  constructor() {
+    this.blocks = [];
+  }
+
+  // 이전 해쉬값 불러오기 method
+  private getPrevHash() {
+    if (this.blocks.length === 0) return "";
+    return this.blocks[this.blocks.length - 1].hash;
+  }
+  public addBlock(data: string) {
+    const newBlock = new Block(
+      this.getPrevHash(),
+      this.blocks.length + 1,
+      data
+    );
+
+    this.blocks.push(newBlock);
+  }
+}
+```
+
+확인용으로 블록에 접근 할 수 있는 메소드 하나 더 ㄱㄱ
+
+```ts
+  public getBlock() {
+    return this.blocks;
+  }
+```
+
+그리고 값을 넣자
+
+```ts
+const blockschain = new Blockchain();
+
+blockschain.addBlock("First one");
+blockschain.addBlock("Second one");
+blockschain.addBlock("Third one");
+
+console.log(blockschain.getBlock());
+```
+
+이러면
+
+```
+[
+  Block {
+    prevHash: '',
+    height: 1,
+    data: 'First one',
+    hash: 'd90f2cc6ecdb63760af30f041a06e85e9a4d3376cccc09ff807e08c749e81ca9'
+  },
+  Block {
+    prevHash: 'd90f2cc6ecdb63760af30f041a06e85e9a4d3376cccc09ff807e08c749e81ca9',
+    height: 2,
+    data: 'Second one',
+    hash: '21625d153b9a2ba0996ac8a8ce85b78d5512a4c0bbf647548b0befab3e9b3cfe'
+  },
+  Block {
+    prevHash: '21625d153b9a2ba0996ac8a8ce85b78d5512a4c0bbf647548b0befab3e9b3cfe',
+    height: 3,
+    data: 'Third one',
+    hash: '33090390c5b209e1796881ef8aa55128e9beab0941cbc6f4989260d6f5bd961b'
+  }
+]
+```
+
+캬 이쁘게 나왔네 ㅋ
+
+잘 나왔는데 문제가 있음
+
+현재 상태로는 누구든지 이 값을 추가 해버릴 수 있음
+
+```ts
+  public getBlock() {
+    return this.blocks;
+  }
+```
+
+블럭을 리턴할때 this.blocks을 리턴하는데
+
+이건 실제블록 값이고 private 값임
+
+```ts
+blockschain.getBlock().push(new Block("ssssssss", 222222, "hahahahahahahaha"));
+```
+
+이렇게 가짜 값을 바로 넣어 버릴 수 있음
+
+그렇기 때문에 실제 값이 아닌
+
+새 배열에 담아서 줘야함
+
+```ts
+  public getBlock() {
+    return [...this.blocks];
+  }
+```
+
+## 5.8 Conclusions
