--- a/md/5.0 ~ 5.8 BLOCKCHAIN.md
+++ b/md/5.0 ~ 5.8 BLOCKCHAIN.md
@@ -411,3 +411,19 @@ blockschain.getBlock().push(new Block("ssssssss", 222222, "hahahahahahahaha"));
 ```
 
 ## 5.8 Conclusions
+
+끝이다
+
+타입스크립트를 더 공부하고 싶다면?
+
+우버이츠 클론코딩 혹은 캐럿마켓 클론코딩을 수강하시면 됩니다.
+
+라는데
+
+내가 봤을땐 지금 JS 를 좀 더 배워야 할꺼 같음
+
+글고 리액트JS 랑 nestJS 도 좀 더 공부 해야할음
+
+우선 JS 강의 들으면서 TS 로 바꾸면서 하면 되지 않을까 약간 이런 생각 중인데
+
+해봐야 알듯
