--- a/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
+++ b/md/4.0 ~ 4.5 CLASSES AND INTERFACES.md
@@ -203,7 +203,7 @@ class Dict {
   }
 
   // 단어 추가 메소드
-  add(word: Word) {
+  add(word: Words) {
     if (this.words[word.term] === undefined) {
       // undefined 는 사전에 없는가를 묻는거
       this.words[word.term] = word.def;
