--- a/md/5.0 ~ 5.8 BLOCKCHAIN.md
+++ b/md/5.0 ~ 5.8 BLOCKCHAIN.md
@@ -24,6 +24,26 @@ package.json 초기화
 npm init -y
 ```
 
+`tsconfig.json`
+
+이 파일이 있으면, vs code는 우리가 타입스크립트로 작업한다는걸
+
+즉시 알게되고 자동완성기능을 제공 해줄꺼임
+
+- include
+
+  자바스크립트로 파일을 컴파일하고 싶은 파일 주소 지정
+
+- compilerOption
+
+  - outDir
+
+    자바스크립트 파일이 생성될 주소를 지정
+
+  - target
+
+    어떤 버전의 자바스크립트를 컴파일 할 것인가 지정
+
 tsconfig.json설정
 
 디렉터리에 tsconfig.json 파일이 있으면
