--- a/md/5.0 ~ 5.8 BLOCKCHAIN.md
+++ b/md/5.0 ~ 5.8 BLOCKCHAIN.md
@@ -90,6 +90,36 @@ https://www.typescriptlang.org/tsconfig#lib
 
 ## 5.3 Declaration Files
 
+Declaration Files
+
+    타입스크립트에게 구조, 아규먼트 리턴값 등을 설명 해주는거
+
+대부분의 프레임워크, 라이브러리는 타입스크립트가 아니라 자바스크립트로 만들어져 있음
+
+그래서 js 라이브러리를 ts에서 쓰려고 하면 그것들의 정보에 대해 알길이 없음
+
+그걸 해주는게 Declaration 임
+
+가령
+
+`myPackage.d.ts`
+
+````ts
+interface Config{
+  urls: string
+}
+declare module "myPackage" {
+  function init(config: Config): boolean;
+}
+
+```
+
+이러면 해당 init 함수의 정보가 나옴
+
+config 매개변수는 urls string 형식이고
+
+return 은 참거짓 행태라고
+
 strict
 
 모든 엄격한 타입 검사 옵션을 활성화합니다.
@@ -133,17 +163,17 @@ JSDoc
   export function init(config) {
     return true;
   }
-  ```
+````
 
-  이럼 config는 object 고
+이럼 config는 object 고
 
-  config 안에 debug는 boolean 이고
+config 안에 debug는 boolean 이고
 
-  url 은 string 이라는 소리임
+url 은 string 이라는 소리임
 
-  글고 마지막 void는 return 을 말하는 거임
+글고 마지막 void는 return 을 말하는 거임
 
-  void인데 true로 boolean을 뱉고 있어서 오류 뜸
+void인데 true로 boolean을 뱉고 있어서 오류 뜸
 
 이러한 오류를 무시하고 싶다면
 
